# mock-igd

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: test.yml
docs/: design.md
examples/: basic.rs
src/: error.rs  lib.rs  mock.rs
src/action/: mod.rs  types.rs
src/matcher/: mod.rs
src/responder/: builder.rs  mod.rs  templates.rs
src/server/: http.rs  mod.rs  ssdp.rs
tests/: integration.rs
